k8s/namespace-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskmgr
